Set new name of device v2
